# POMA

./: .gitignore  README.md  my_experiment.json  pyproject.toml  requirements.txt
docs/: ARCHITECTURE_ANALYSIS.md  QUICKSTART_GUIDE.md
examples/: config.json
examples/challenges/level1/L1-01/: Dockerfile  challenge.c  challenge.json  decompiled.c  exploit.py  flag.txt  ground_truth.json
examples/challenges/level1/L1-02/: Dockerfile  challenge.json
examples/challenges/level1/L1-03/: Dockerfile  challenge.json
examples/challenges/level1/L1-04/: Dockerfile  challenge.json
examples/challenges/level1/L1-05/: Dockerfile  challenge.json
examples/challenges/level1/L1-06/: Dockerfile  challenge.json
examples/challenges/level1/L1-07/: Dockerfile  challenge.json
examples/challenges/level1/L1-08/: Dockerfile  challenge.json
examples/challenges/level1/L1-09/: Dockerfile  challenge.json  decompiled.c
examples/challenges/level1/L1-10/: Dockerfile  challenge.json
examples/challenges/level2/L2-01/: Dockerfile  challenge.json
examples/challenges/level2/L2-02/: Dockerfile  challenge.json
examples/challenges/level2/L2-03/: Dockerfile  challenge.json
examples/challenges/level2/L2-04/: Dockerfile  challenge.json
examples/challenges/level2/L2-05/: Dockerfile  challenge.json
examples/challenges/level2/L2-06/: Dockerfile  (+1 more)
poma/: __init__.py  cli.py
poma/challenges/: __init__.py  manager.py
poma/config/: __init__.py  default.yaml
poma/core/: __init__.py  evaluator.py
poma/evaluation/: __init__.py  analyzer.py
poma/llm/: __init__.py  base.py  providers.py
poma/parsing/: __init__.py  json_parser.py  regex_parser.py
poma/prompts/: __init__.py  templates.py
poma/schemas/: models.py
scripts/: test_openrouter.py
tests/: test_analyzer.py  test_base_llm.py  test_evaluator.py  test_models.py  test_parsing.py
(+90 files in other folders)
